@@ -52,7 +52,7 @@ dependencies {
     implementation("org.apache.spark:spark-sql_2.13:${vSparkSql}")
     implementation("io.delta:delta-spark_2.12:3.1.0")
     implementation("org.apache.hadoop:hadoop-aws:3.2.0")
-    testImplementation("org.testng:testng:${vTestNg}")
+    implementation("org.testng:testng:${vTestNg}")
 }
 
 java {
@@ -63,6 +63,29 @@ test {
     useTestNG {
 
     }
+}
+
+tasks.register('try', JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    mainClass = 'edu.washu.tag.generator.QueryTester'
+
+    // thanks to https://stackoverflow.com/a/76805763
+    jvmArgs = [
+        '--add-opens=java.base/java.lang=ALL-UNNAMED',
+        '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
+        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+        '--add-opens=java.base/java.io=ALL-UNNAMED',
+        '--add-opens=java.base/java.net=ALL-UNNAMED',
+        '--add-opens=java.base/java.nio=ALL-UNNAMED',
+        '--add-opens=java.base/java.util=ALL-UNNAMED',
+        '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
+        '--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED',
+        '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
+        '--add-opens=java.base/sun.nio.cs=ALL-UNNAMED',
+        '--add-opens=java.base/sun.security.action=ALL-UNNAMED',
+        '--add-opens=java.base/sun.util.calendar=ALL-UNNAMED',
+        '--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED'
+    ]
 }
 
 tasks.register('generateSpecs', JavaExec) {
